--- a/templates/awards_info.html
+++ b/templates/awards_info.html
@@ -1,6 +1,6 @@
 <div class="panel">
     <div class="panel-heading"><b>$award</b> - %ranking%: $rang <p class="pull-right">$date</p></div>
-    $info
+    <div class="panel-body">$info</div>
     <div class="panel-footer">$homepage</div>
 </div>
 
