--- a/templates/members_content_foot.html
+++ b/templates/members_content_foot.html
@@ -1,5 +1,4 @@
-  <tr>
-    <td bgcolor="$bgcat" colspan="4">$details</td>
-  </tr>
-</table>
-<br /><br />
+        </table>
+    </div><!-- panel-body -->
+    <div class="panel-footer">$details</div>
+</div><!-- panel -->
