--- a/templates/members_details_head.html
+++ b/templates/members_details_head.html
@@ -1,17 +1,14 @@
-<table width="100%" cellpadding="2" cellspacing="0" border="0" bgcolor="$border">
-  <tr bgcolor="$bgcat">
-    <td colspan="4">
-    <table border="0" width="100%" cellspacing="0" cellpadding="0">
-      <tr>
-        <td width="100%" colspan="2">$icon</td>
-      </tr>
-      <tr>
-        <td><span class="category_big">$name ($anzmembers)</span></td>
-        <td align="right"><small>$results $awards $challenge</small></td>
-      </tr>
-      <tr>
-        <td colspan="2">$info<hr /></td>
-      </tr>
-    </table>
-    </td>
-  </tr>
+<div class="panel">
+    <div class="panel-heading">
+        <div class="pull-left">
+            $icon $name ($anzmembers)
+        </div>
+        <div class="pull-right">
+            <small>$results $awards $challenge</small>
+        </div>
+        <br class="clearfix">
+    </div>
+    <div class="panel-body">
+        <div class="well well-sm">
+            $info    
+        </div>
