--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -2,7 +2,9 @@
     <div class="panel-heading">
           $actions <b>$name</b> <i class="icon-calendar"></i> $date <span class="hidden">$email $hp</span> <span class="hidden">$icq %ip%: $ip</span> $quote
     </div>
-    $message<br>
-    $admincomment 
+    <div class="panel-body">
+        $message
+        $admincomment 
+    </div>
 </section>
 <hr>
