--- a/templates/faq_category.html
+++ b/templates/faq_category.html
@@ -1,4 +1,4 @@
-<section class="panel">
+<section class="panel panel-default">
     <header class="panel-heading">$faqcatname ( $anzfaqs %faqs% )</header>
     <article class="panel-body">$description</article>
 </section>
