--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -1,4 +1,4 @@
-<section class="panel">
+<section class="panel panel-default">
     <div class="panel-heading">
           $actions <b>$name</b> <i class="icon-calendar"></i> $date <span class="hidden">$email $hp</span> <span class="hidden">$icq %ip%: $ip</span> $quote
     </div>
