--- a/templates/guestbook_notloggedin.html
+++ b/templates/guestbook_notloggedin.html
@@ -56,10 +56,10 @@ function chkFormular() {
     </div>
 
 
-<div class="form-group">
-    <div class="input-group">
-        <span class="input-group-addon captcha-img">$captcha</span>
-        <input id="gbcaptche" type="number" name="captcha" placeholder="Enter Captcha"  autocomplete="off" class="form-control"><input name="captcha_hash" type="hidden" value="$hash" />
+    <div class="form-group">
+        <div class="input-group">
+            <span class="input-group-addon captcha-img">$captcha</span>
+            <input id="gbcaptche" type="number" name="captcha" placeholder="Enter Captcha"  autocomplete="off" class="form-control"><input name="captcha_hash" type="hidden" value="$hash">
+        </div>
     </div>
-</div>
 </form>
